--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -104,6 +104,6 @@ h1:before, .anchor:before {
     margin-top: .5em;
     margin-left: -.5em;
     color: white;
-    background-color: #00369f;
+    background-color: #c0392b;
     font-size: .8em;
 }
